# WatchTower

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260413_00_initial_tables.py  20260413_01_add_user_admin_columns.py  20260628_02_add_trigger_topic_active_index.py  20260628_03_remove_admin_features.py  20260628_04_rename_topic_slugs_to_coin_symbols.py  (+2 more)
backend/api/: __init__.py  admin.py  auth.py  coins_router.py  dependencies.py  health.py  paper_trading_router.py  subscription.py  topics.py  topics_router.py  trigger_router.py  websocket.py
backend/core/: coins.py  config.py  database.py  database_url.py  dependencies.py  exception.py  logger.py  rate_limiter.py  security.py  topics.py  worker_status.py
backend/models/: __init__.py  email_queue.py  event_log.py  paper_trading.py  password_reset.py  subscription.py  topic_subscription.py  trigger.py  user.py
backend/schemas/: admin.py  event.py  subscription.py  trigger.py  user.py
backend/scripts/: check_health.py  create_admin.py  entrypoint.sh  seed.py
backend/services/: alert.py  auth_service.py  broadcaster.py  database.py  email_service.py  event_log_writer.py  event_processing_service.py  health_service.py  indicators.py  password_reset_service.py  subscription_service.py  trigger_services.py  websocket_service.py
backend/tests/: conftest.py
backend/tests/api/: test_admin.py  (+5 more)
backend/workers/: base.py  basketball.py  crypto.py  email_worker.py  runner.py
(+48 files in other folders)
