[project]
name = "backend"
version = "0.1.0"
description = "Real-time event-driven monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "redis>=7.3.0",
    "sqlalchemy[asyncio]>=2.0.48",
]
